unpackaged/main/default/objects/AccountSurvey__c/AccountSurvey__c.object-meta.xml
<CustomObject>
    <label>Account Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>