unpackaged/main/default/objects/AccountSurvey__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Surveys</relationshipLabel>
    <relationshipName>AccountSurveys</relationshipName>
    <type>Lookup</type>
</CustomField>