unpackaged/main/default/objects/AccountSurvey__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Account Surveys</relationshipLabel>
    <relationshipName>AccountSurveys</relationshipName>
    <type>Lookup</type>
</CustomField>