unpackaged/main/default/objects/AccountSurvey__c/fields/StoreID__c.field-meta.xml
<CustomField>
    <fullName>StoreID__c</fullName>
    <label>Store ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>