unpackaged/main/default/objects/AccountSurvey__c/fields/SurveySource__c.field-meta.xml
<CustomField>
    <fullName>SurveySource__c</fullName>
    <label>Survey Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>